# OPIT-Capstone-Project-and-Dissertation

./: main.py  pyproject.toml
Data/: BaselineModel_Results.csv  caching_llm_results.csv
Notebooks/: AgenticTrader.ipynb  Experiments.ipynb  IndicatorsOHLCData.ipynb  MultiAgentLLM_Results.csv  MultiAgentTrader.ipynb  OHLCData.ipynb
Notebooks/.ipynb_checkpoints/: Experiments-checkpoint.ipynb  IndicatorsOHLCData-checkpoint.ipynb  MultiAgentTrader-checkpoint.ipynb
Utilities/: agentic_trader.py  metrics.py  model.py  plot.py  prompts.py  utils.py
