[project]
name = "capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "matplotlib>=3.10.9",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "ta>=0.11.0",
    "xgboost>=3.2.0",
]
